RESOLVED FIXED120793
[GTK] GlibUtilities: getCurrentExecutablePath() does not compile on GNU/Hurd
https://bugs.webkit.org/show_bug.cgi?id=120793
Summary [GTK] GlibUtilities: getCurrentExecutablePath() does not compile on GNU/Hurd
Alberto Garcia
Reported 2013-09-05 13:57:43 PDT
That's because PATH_MAX is not defined there. Reported in Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=669059
Attachments
Patch (1.25 KB, patch)
2013-09-05 13:59 PDT, Alberto Garcia
no flags
Patch (1.25 KB, patch)
2013-09-05 14:01 PDT, Alberto Garcia
gustavo: review+
Alberto Garcia
Comment 1 2013-09-05 13:59:49 PDT
WebKit Commit Bot
Comment 2 2013-09-05 14:00:52 PDT
Attachment 210658 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/gobject/GlibUtilities.cpp']" exit_code: 1 Source/WTF/wtf/gobject/GlibUtilities.cpp:43: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alberto Garcia
Comment 3 2013-09-05 14:01:25 PDT
Created attachment 210660 [details] Patch The previous patch needed style fixes, here's the updated one.
Sergio Villar Senin
Comment 4 2013-09-06 01:15:08 PDT
Comment on attachment 210660 [details] Patch I see how this could help with the build, but IMO the patch should actually fix the underlying issue. I believe there should be a way in GNU/Hurd to retrieve the current executable path even if PATH_MAX is not defined.
Emilio Pozuelo Monfort
Comment 5 2013-09-06 03:41:53 PDT
There's currently no way to get the executable path on GNU/Hurd (there is /proc/self but there's no /proc/self/exe), but the catch-all case in findWebKitProcess() which just uses LIBEXECDIR should work fine there. If you want we can keep a downstream patch with a dummy getCurrentExecutablePath() until there's a way to get the executable path on the Hurd.
Gustavo Noronha (kov)
Comment 6 2013-09-06 09:38:47 PDT
Comment on attachment 210660 [details] Patch No point in waiting, I think, let's just do it and we can revisit if it is made possible in the future.
Alberto Garcia
Comment 7 2013-09-06 09:47:49 PDT
Note You need to log in before you can comment on or make changes to this bug.