[GTK] GlibUtilities: getCurrentExecutablePath() does not compile on GNU/Hurd https://bugs.webkit.org/show_bug.cgi?id=120793

Reviewed by Gustavo Noronha Silva.

Original patch by Svante Signell <svante.signell@telia.com>.

PATH_MAX is not defined in GNU/Hurd, this patch adds a dummy
implementation to make it compile.

* wtf/gobject/GlibUtilities.cpp:
(getCurrentExecutablePath):

Canonical link: https://commits.webkit.org/138802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155193 268f45cc-cd09-0410-ab3c-d52691b4dbfc