Source/WTF/wtf/gobject/GlibUtilities.cpp
@@ -37,6 +37,11 @@ CString getCurrentExecutablePath()
         return CString();
     return CString(readLinkBuffer, result);
 }
+#elif OS(HURD)
+CString getCurrentExecutablePath()
+{
+    return CString();
+}
 #elif OS(UNIX)
 CString getCurrentExecutablePath()
 {
